// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DebugInfo is visible when opened with keyboard shortcut 1`] = `
<DocumentFragment>
  <div
    class="debug-info debug-info-visible"
  >
    <textarea
      readonly=""
      wrap="off"
    />
  </div>
</DocumentFragment>
`;

exports[`DebugInfo renders 1`] = `
<DocumentFragment>
  <div
    class="debug-info"
  >
    <textarea
      readonly=""
      wrap="off"
    />
  </div>
</DocumentFragment>
`;
